--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,942 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: brown;
+}
+
+nav {
+  height: 80px;
+  display: flex;
+}
+
+img {
+  width: 100%;
+}
+
+p {
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+ul {
+  display: flex;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-weight: 900;
+  letter-spacing: 2px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  font-size: 45px;
+  max-width: 1000px;
+  margin-bottom: 40px;
+  color: #fff;
+}
+
+h2 {
+  padding: 20px 0 1px;
+  font-size: 28px;
+  line-height: 1.25;
+  color: #6030b1;
+}
+
+h3 {
+  margin-bottom: 12px;
+  font-size: 20px;
+  color: rgb(52, 52, 54);
+  display: block;
+  margin-block-start: 0 em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+
+.black__text {
+  color: #0a1f44;
+  display: inline-block;
+}
+
+.white {
+  color: white;
+}
+
+.purple {
+  color: #6030b1;
+}
+
+.gray {
+  color: gray;
+}
+
+.light__purple {
+  color: #b9abfc;
+}
+
+.white__text {
+  color: white;
+  display: inline-block;
+  font-size: 10px;
+  line-height: 2.5;
+}
+
+.yellow__text {
+  color: yellow;
+}
+
+button {
+  cursor: pointer;
+}
+
+.link__hover-effect {
+  position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  height: 3px;
+  width: 0;
+  right: 0;
+  background-color: black;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+  background-color: #fff;
+}
+
+.link__hover-effect--black:after {
+  background-color: #242424;
+}
+
+.link__hover-effect:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0px 16px;
+}
+
+/* 
+
+HEADER / NAVBAR
+
+*/
+
+.nav__container {
+  height: 200px;
+  padding: 40px;
+  align-items: center;
+  position: relative;
+}
+
+.navbar {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo__wrapper {
+  display: flex;
+  align-items: center;
+  font-size: 40px;
+}
+
+.logo {
+  padding-top: 2px;
+  color: red;
+}
+
+.btn__menu {
+  background-color: transparent;
+  font-size: 32px;
+  border: none;
+  color: #7342d6;
+  display: none;
+}
+
+.menu__backdrop {
+  position: absolute;
+  background-color: #242424;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  transition: all 300ms ease;
+  opacity: 0;
+  transform: translate(100%);
+}
+
+.menu--open {
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+.menu--open .menu__backdrop {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(0);
+}
+
+.menu__links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu__list {
+  padding: 32px 0;
+}
+
+.menu__link {
+  color: white;
+  font-size: 40px;
+}
+
+.btn__menu--close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 8px;
+  color: white;
+}
+
+.navbar__links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 250px;
+  padding: 0px 20px 0px 0px;
+}
+
+.btn__find {
+  display: flex;
+  cursor: pointer;
+  max-height: 48px;
+  min-height: 48px;
+  padding: 12px 24px;
+  align-items: center;
+  border: 2px #5d3eff;
+  border-radius: 50px;
+  background-color: #6030b1;
+  color: #fff;
+  font-size: 11px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: all 0.35s ease;
+}
+
+.btn__find:hover {
+  --tw-border-opacity: 1;
+  border-color: #6415ff;
+  --tw-bg-opacity: 1;
+  background-color: #ff0000;
+  --tw-text-opacity: 1;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 13px;
+  transform: scale(1.05);
+}
+
+.home__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#home--navbar {
+  transition: all 0.2s ease;
+  color: #ff9500;
+}
+#home--navbar:hover {
+  color: yellow;
+  transform: scale(1.2);
+}
+
+.navbar__overlay {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)),
+    url("https://s.hdnux.com/photos/01/14/56/77/20115400/3/rawImage.jpg");
+  background-repeat: no-repeat;
+
+  background-size: cover;
+  background-attachment: fixed;
+  filter: blur(3px);
+  width: 100%;
+  height: 100vh;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.navbar__overlay:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(41, 25, 71, 0.3);
+  pointer-events: none;
+}
+
+/* 
+
+HOME
+
+*/
+
+.search__container {
+  margin: 0 auto;
+  margin-top: 150px;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.search__element {
+  width: 85%;
+  max-width: 600px;
+  margin: 0px, 50px;
+  position: relative;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+input[type="text"] {
+  color: rgba(0, 0, 0, 0.658);
+  width: 100%;
+  max-width: 800px;
+  height: 60px;
+  font-size: 20px;
+  padding-left: 20px;
+  opacity: 90%;
+}
+
+input[type="text"]:focus {
+  --tw-border-opacity: 1;
+  border-color: #ffffff;
+  outline: solid 30px;
+  outline-offset: 2px;
+  opacity: 100%;
+  color: rgba(0, 0, 0, 0.87);
+}
+
+.search__element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+}
+
+.search__element .form__control {
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  border: none;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  outline: none;
+  color: var(--light-dark-color);
+}
+
+.search__glass {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  padding: 0 20px 0 8px;
+  font-size: 32px;
+  transition: all 0.2s ease;
+}
+
+#magnifying--glass {
+  transition: all 0.2s ease;
+  color: #6030b1;
+}
+
+#magnifying--glass:hover {
+  color: rgb(255, 0, 106);
+  transform: scale(1.1);
+}
+
+.search__suggestions {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  max-width: 600px;
+  line-height: 2;
+}
+
+/* 
+
+Movies
+
+*/
+
+.movies__container {
+  margin: 0 auto;
+  margin-top: 100px;
+  width: 85%;
+  height: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex: 1;
+  align-items: center;
+  position: relative;
+}
+
+.movies__searchfilter--wrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.search__element--movies {
+  width: 60%;
+  max-width: 400px;
+  margin: 0px, 50px;
+  position: relative;
+  border-radius: 50px;
+  overflow: hidden;
+}
+
+#movies-search-box {
+  height: 50px;
+  font-size: 1 rem;
+}
+
+#filter {
+  width: 40%;
+  max-width: 300px;
+  margin: 0px, 50px;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+  text-align: center;
+  background-color: rgb(197, 197, 197);
+}
+
+.results__grid {
+  margin: 0 auto;
+  margin-top: 50px;
+  width: 90%;
+  height: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.movie__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin: 16px;
+  padding: 0 18px 0 0;
+  background-color: #dad8ee;
+  border-bottom: 1px solid var(--dark-color);
+  border-radius: 10px;
+  border: 1px solid rgb(177, 197, 209);
+  width: calc(80% / 3);
+  min-height: 365px;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: background-color 200ms ease;
+  -o-transition: background-color 200ms ease;
+  transition: background-color 300ms ease;
+}
+
+.movie__card:hover {
+  background-color: #121218;
+  box-shadow: 0px 0px 16px #b04fffd7;
+  transform: scale(1.05);
+}
+
+.movie__card:hover h3 {
+  color: yellow;
+}
+.movie__card:hover p {
+  color: white;
+}
+
+.movie__poster {
+  max-width: 280px;
+  width: 100%;
+  margin: 8px;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  box-shadow: 2px 5px 30px #4e4a528e;
+}
+
+.movie__info--year {
+  color: rgb(59, 59, 59);
+  line-height: 1;
+  margin-bottom: 16px;
+}
+
+.movie__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.spinner__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner__loader {
+  height: 80px;
+  width: 80px;
+  border: 6px solid;
+  border-color: white transparent;
+  border-radius: 50%;
+  margin: 20px;
+  animation: spin 5s ease infinite;
+  position: relative;
+}
+
+.spinner__loader--gray {
+  height: 80px;
+  width: 80px;
+  border: 6px solid;
+  border-color: rgb(88, 88, 88) transparent;
+  border-radius: 50%;
+  margin: 20px;
+  animation: spin 5s ease infinite;
+  position: relative;
+}
+
+.movies {
+  position: absolute;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading__card {
+  min-height: 450px;
+  background-color: #f0f1e5;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 900px;
+  width: 78%;
+  padding: 8px;
+  position: relative;
+  border: 0px solid black;
+  border-radius: 2px;
+
+  opacity: 0.7;
+  transition: 300ms ease-in-out;
+}
+
+.blinking {
+  animation: blink 2s infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/*
+
+Movie Deatails
+
+*/
+
+.movies__details--wrapper {
+  width: 100%;
+  max-width: 1200px;
+}
+
+.back__wrapper {
+  display: flex;
+  width: 78%;
+  max-width: 1200px;
+  flex-direction: row;
+}
+
+#back__arrow {
+  color: white;
+  margin: 20px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.back__text {
+  z-index: 10;
+}
+
+.movies__details {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+
+  align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-top: 120px;
+}
+
+.moviespick__grid {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 900px;
+  width: 78%;
+  padding: 8px;
+  position: relative;
+  border: 0px solid black;
+  border-radius: 2px;
+  box-shadow: 15px 15px 50px #0e081348;
+  background-color: #f0f1e5;
+  transition: 300ms ease-in-out;
+}
+
+.movies__poster img {
+  max-width: 320px;
+  width: 100%;
+  margin: 24px;
+  border: 2px solid #000000;
+  border-radius: 10px;
+  box-shadow: 16px 16px 30px #4e4a528e;
+}
+.movies__poster--loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 320px;
+  min-height: 300px;
+  width: 100%;
+  margin: 24px;
+  border: 2px solid #5e5e5e;
+  border-radius: 10px;
+}
+
+/* movie detail stylings */
+
+.movies__title {
+  font-size: 32px;
+  color: var(--yellow-color);
+  margin: 0 36px;
+  padding: 8px;
+}
+.movies__misc--info {
+  margin: 0 36px;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+
+  padding: 8px;
+}
+.movies__main--info {
+  margin: 0 36px;
+}
+
+.movies__info .year {
+  font-weight: 500;
+}
+.movies__info .rated {
+  background-color: var(--yellow-color);
+  padding: 0.4rem;
+  margin: 0 0.4rem;
+  border-radius: 3px;
+  font-weight: 600;
+}
+.flix__info .released {
+  font-size: 0.9rem;
+  opacity: 0.9;
+}
+.movies__info .writer {
+  padding: 0.5rem;
+  margin: 1rem 0;
+}
+
+.movies__info .actors {
+  padding: 0.5rem;
+  margin: 1rem 0;
+}
+
+.movies__info .genre {
+  background-color: var(--light-dark-color);
+  display: inline-block;
+  padding: 0.5rem;
+  border-radius: 3px;
+}
+.movies__info .plot {
+  max-width: 400px;
+  margin: 8px;
+}
+.movies__info .language {
+  color: var(--yellow-color);
+  font-style: italic;
+  padding: 8px;
+}
+.movies__info .awards {
+  font-weight: 300;
+  font-size: 0.9rem;
+  padding: 8px;
+}
+.movies__info .awards i {
+  color: var(--yellow-color);
+  margin: 1rem 0.7rem 0 0;
+}
+
+@media (max-width: 1200px) {
+  .results__grid {
+    justify-content: space-around;
+  }
+
+  .movie__card {
+    width: calc(80% / 3);
+  }
+}
+
+@media (max-width: 1000px) {
+  .results__grid {
+    justify-content: center;
+  }
+
+  .movie__card {
+    width: calc(95% / 3);
+    max-width: 220px;
+  }
+
+  .movies__searchfilter--wrapper {
+    justify-content: space-between;
+    width: 90%;
+  }
+
+  #filter {
+    max-width: 200px;
+  }
+
+  .moviespick__grid {
+    max-width: 1200px;
+    width: 90%;
+  }
+
+  .back__wrapper {
+    width: 90%;
+  }
+}
+
+@media (max-width: 780px) {
+  .nav__container {
+    height: 50px;
+    padding-bottom: 4px;
+  }
+
+  .movies__searchfilter--wrapper {
+    width: 100%;
+  }
+
+  .movies__container {
+    margin-top: 50px;
+  }
+
+  .search__element--movies {
+    width: 57%;
+  }
+
+  .results__grid {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .movie__card {
+    width: 55%;
+    max-width: 800px;
+  }
+
+  .movie__poster {
+    width: 100%;
+    max-width: 500px;
+  }
+
+  .movies__details {
+    margin-top: 60px;
+  }
+
+  .moviespick__grid {
+    width: 65%;
+    flex-direction: column;
+  }
+
+  .movies__poster img {
+    width: 85%;
+  }
+
+  .nav__container {
+    padding: 30px;
+  }
+
+  .navbar__links {
+    justify-content: space-between;
+  }
+
+  .movie__title {
+    font-size: 22px;
+    margin-bottom: 4px;
+  }
+
+  .movie__info {
+    padding: 0 16px;
+  }
+}
+
+/* SMALL PHONES, LARGE SMARTPHONES */
+
+@media (max-width: 550px) {
+  .movies__searchfilter--wrapper {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .search__element--movies {
+    width: 80%;
+  }
+
+  #filter {
+    padding: 8px;
+    width: 100%;
+    max-width: 300px;
+    margin-top: 12px;
+  }
+
+  .movie__card {
+    width: 70%;
+    max-width: 800px;
+  }
+  .btn__menu {
+    display: block;
+  }
+
+  .logo {
+    font-size: 22px;
+    margin-bottom: 4px;
+  }
+
+  .moviespick__grid {
+    width: 80%;
+  }
+
+  .movies__poster img {
+    width: 85%;
+  }
+
+  .navbar__links {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .search__list .search__list--item {
+    width: calc(95% / 1);
+  }
+
+  .search__item--thumbnail img {
+    width: 150px;
+  }
+
+  .movie__title {
+    text-align: center;
+  }
+
+  .logo {
+    font-size: 26px;
+  }
 }
